{
    "name": "ShiCamControlAcrions",
    "maps": [
        {
            "name": "ShiCamera",
            "id": "dd146f25-1a0a-4ef8-a128-a3d4d1127e0b",
            "actions": [
                {
                    "name": "Mouse_Rotate",
                    "type": "Value",
                    "id": "7ab94a02-fee5-4821-8159-1619ec331d96",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Mouse_Zoom",
                    "type": "Value",
                    "id": "9b57733c-cb7b-4931-885d-e1d0c070a9a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Mouse_Pan",
                    "type": "Value",
                    "id": "64d00ea1-9424-4809-ab39-1e35860e6870",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch_0",
                    "type": "Value",
                    "id": "94360f8e-6821-48a0-af83-6f0870a381f3",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch_1",
                    "type": "Value",
                    "id": "5fcdcdcc-cb1d-4731-a857-0a2536cd7e47",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch_2",
                    "type": "Value",
                    "id": "d5df6dc6-7c37-46d5-894a-87cab4eea099",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "31670c6d-fe4f-43fb-acd9-e42082bde228",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2d32ca4-67d5-47ec-999e-5f8790246038",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00d0bdbf-b2f9-4284-9708-06793fb07b9f",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Pan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc2703fa-6892-4ebe-9915-1d34d1d9606d",
                    "path": "<Touchscreen>/touch0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch_0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a65b8c42-7393-4728-ab1d-b1d4d38b99b8",
                    "path": "<Touchscreen>/touch1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acf42f82-94c4-4a24-858d-8fc1de84b1b6",
                    "path": "<Touchscreen>/touch2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}